# ua-generator

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: lint.yml  release.yml  unittest.yml  update-bot.yml
cli/update_bot/updaters/: __init__.py  chrome.py  edge.py  firefox.py  ios.py  macos.py
scripts/update-bot/: chrome.py  edge.py  firefox.py  ios.py  macos.py
scripts/update_bot/updaters/: __init__.py  chrome.py  edge.py  firefox.py  ios.py  macos.py
src/: __init__.py
src/ua_generator/: __init__.py  client_hints.py  exceptions.py  formats.py  headers.py  navigator.py  options.py  serialization.py  user_agent.py  useragent.py  utils.py
src/ua_generator/data/: __init__.py  filterer.py  generator.py  version.py
src/ua_generator/data/browsers/: chrome.py  edge.py  firefox.py  safari.py
tests/: test_browser.py  test_client_hints.py  test_device.py  test_exceptions.py  test_filterer.py  test_get_versions.py  test_headers.py  test_idx_map.py  test_navigator.py  test_not_none.py  test_options.py  test_platform.py  test_serialization.py  test_src_ua_generator_init_.py  test_typing.py  test_user_agent.py  test_utils.py  test_version.py  test_version_range.py
