[metadata]
name = ua-generator
version = 0.4.0
author = Ekin Karadeniz
author_email = iamdual@icloud.com
description = A random user-agent generator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/iamdual/ua-generator
project_urls =
    Bug Tracker = https://github.com/iamdual/ua-generator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src